# oss-repo-template

labs/lab-01/: lab1.md  report.md
labs/lab-02/: lab2.md
labs/lab-03/: lab3.md
labs/lab-04/: lab4.html  lab4.md
labs/lab-05/: lab5.md
labs/lab-05/part1/step1/: CMakeLists.txt
labs/lab-05/part1/step2/: CMakeLists.txt
labs/lab-05/part1/step4/: CMakeLists.txt
labs/lab-05/part2/: CMakeLists.txt  Makefile  Makefile_cmake
labs/lab-06/: lab6.md  q1_plot_words.py  q4_plot_words.py
labs/lab-08/: lab8.md
labs/lab-09/: lab-09.md
labs/lab-10/: lab10.md
labs/lab-10/check3/: git_diff.txt
labs/lab-10/check4/: checkpoint4.py  fetch_all.txt  fetch_by_obj.txt  fetch_one.txt  fetch_one_specific.txt  insert_one.txt
labs/lab-10/check5/: checkpoint5.py  result.txt
labs/lab-11/: image_urls.txt  lab11.md
